# statistical-arbitrage-simulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  run_demo.bat
include/: AssetPair.h  Backtester.h  MarketData.h  Utilities.h
scripts/: build.sh  generate_sample_data.py  run_demo.sh  setup_tests.sh  visualize.py
src/: AssetPair.cpp  Backtester.cpp  MarketData.cpp  Utilities.cpp  main.cpp
tests/: test_main.cpp
